Logo alignment fix

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -279,7 +279,7 @@ a:active {
     }
 
     .footer {
-        padding: 1em 5%
+        padding: 0 5% 1em 5%;
     }
 }
 
